fix overflow issue

--- a/WebContent/options.css
+++ b/WebContent/options.css
@@ -21,8 +21,7 @@ body > div > div {
 }
 
 .optionBlock {
-	overflow: hidden;
-	height: 30px;
+	height: 35px;
 	position: relative;
 }
 
